# portmaster-windows-kext

./: .gitignore  AUTHORS  README.md  Version.props  deploy.bat  dirs  mingw-build.sh  portmaster-windows-kext.sln  release.bat  release_build.bat  wddk-build.bat
cache_rust/: Cargo.toml
cache_rust/src/: allocator.rs  cache.rs  common.rs  debug.rs  driver.rs  ioqueue.rs  lib.rs  lock.rs  packet_cache.rs  packet_info.rs  verdict_cache.rs  wdk.rs
cache_rust/src/cache/: mod.rs  packet_cache.rs  packet_key.rs  verdict_cache.rs
cache_rust/src/fund/: mod.rs
col/: Makefile  example.c  packet_cache.c  packet_test.c  utils.c  verdict_cache.c
dll/: pm_api.c  pm_api.def  pm_debug.c  pm_kernel_glue.c
examples/portmaster/: portmaster_test.c
include/: packet_cache.h  pm_api.h  pm_callouts.h  pm_checksum.h  pm_common.h  pm_debug.h  pm_debug_dll.h  pm_kernel.h  pm_kernel_glue.h  pm_linux_fix.h  pm_netbuffer.h  pm_register.h  pm_utils.h  verdict_cache.h
inf/: PortmasterKext32.inf  PortmasterKext64.inf
pm_kext/: PortmasterKext32.inx  PortmasterKext64.inx  pm_kext.aps  pm_kext.vcxproj  pm_kext.vcxproj.filters  resource.h  version.rc
pm_kext/col/: packet_cache.c  packet_test.c  utils.c  verdict_cache.c  verdict_test.c
pm_kext/include/: packet_cache.h  pm_callouts.h  pm_checksum.h  pm_common.h  pm_debug.h  pm_kernel.h  pm_netbuffer.h  pm_packet.h  pm_register.h  pm_utils.h  uthash.h  verdict_cache.h  version.h
pm_kext/src/: packet_cache.c  pm_callouts.c  pm_checksum.c  (+7 more)
pm_kext_glue_dll/: pm_kext_glue_dll.aps  pm_kext_glue_dll.vcxproj  pm_kext_glue_dll.vcxproj.filters  version.rc
release/: .gitignore  PortmasterKext.ddf  README.md  release_finalize.bat  release_prepackage.bat  release_set_metadata.bat
sys/: Makefile.inc  pm_callouts.c  pm_checksum.c  pm_col_wrapper.c  pm_debug.c  pm_kernel.c  pm_kernel.rc  pm_netbuffer.c  pm_register.c  pm_utils.c  sources
test/: Makefile  checksum_data.c  checksum_test.c
(+6 files in other folders)
