[package]
name = "cache_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'unwind'
lto='thin'

[profile.dev]
panic = 'unwind'
lto='thin'

[lib]
name = "cache_rust"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies.windows-sys]
version = "0.48"
# default-features = false
features = ["Win32_Foundation"]
