[package]
name = "cache_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'unwind'
lto='thin'

[profile.dev]
panic = 'unwind'
lto='thin'

[lib]
name = "cache_rust"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies.windows-sys]
path = "../../windows-rs/crates/libs/sys"

features = ["Wdk_Foundation", "Win32_Foundation", "Win32_System_Kernel", "Win32_Security", "Wdk_System_SystemServices", "Win32_System_Power", "Win32_System_WindowsProgramming", "Wdk_Storage_FileSystem"]
#features = ["Wdk", "Wdk_Foundation", "Wdk_Storage_FileSystem", "Wdk_System_SystemServices", "Win32_Foundation", "Win32_Graphics_DirectDraw", "Win32_Security", "Win32_System_Kernel", "Win32_System_Power", "Win32_System_WindowsProgramming"]


[dependencies.windows-targets]
version = "0.48"

[dev-dependencies.windows-bindgen]
version = "0.48"
